# Devops-Todo-App

./: CHANGELOG.md  README.md  ec2-user-data.sh  release-please-config.json
.claude/: settings.local.json
.claude/worktrees/daily-capacity-progress/: README.md
.github/workflows/: build-push.yml  build.yml  ci.yml  close-stale-issues-and-prs.yml  export-timing-data.yml  release-please.yml  test.tmp.yml  test.yml
todo-api/: .gitignore  README.md  main.py  pyproject.toml
todo-api/.claude/: settings.local.json
todo-api/.github/workflows/: ci.yml  test.yml
todo-api/.specify/: feature.json
todo-api/.specify/integrations/: claude.manifest.json  speckit.manifest.json
todo-api/.specify/memory/: constitution.md
todo-api/.specify/workflows/: workflow-registry.json
todo-api/backend/: .dockerignore  .env.example  Dockerfile  db.py  main.py  pyproject.toml
todo-api/backend/model/: models.py
todo-api/backend/routes/: health.py  settings.py  tasks.py
todo-api/backend/services/: fading.py  settings.py  tasks.py
todo-api/backend/tests/: conftest.py  test_health.py  test_settings.py  test_tasks.py
todo-api/docker/: .env  docker-compose.yml
todo-api/frontend/: .dockerignore  Dockerfile  nginx.conf
todo-api/frontend/src/: App.tsx
todo-api/specs/001-bitir-task-skeleton/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
todo-api/specs/002-single-task-recommendation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
todo-api/specs/003-task-fading/: data-model.md  plan.md  quickstart.md  research.md  spec.md  (+1 more)
(+109 files in other folders)
