[project]
name = "todo-api"
version = "0.1.0"
description = "Bitir backend API"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.139.0",
    "psycopg[binary]>=3.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
